December 2019 7.0
  - Fixed bugs:
   -> Missing CSS for Duo

29.09.2019 6.9
  - Group account types can show member+owner count in list view
  - 2-factor authentication:
   -> Duo support
   -> user name attribute for privacyIDEA can be specified
  - LAM Pro:
   -> New self service settings for login and main page footer
   -> Custom fields: custom labels for LDAP search select list
  - Fixed bugs:
   -> Configuration issue with Unix user/host module (206)


02.07.2019 6.8
  - Parallel editing of multiple entries in different browser tabs supported
  - LAM supports the progressive web app standard which allows to install LAM as an icon on home screen
  - Windows: added home drive and force password change to profile editor
  - Unix: password management can be disabled in module settings
  - LAM Pro:
   -> Bind DLZ: entry table can show record data (use special attribute "#records" in server profile)
   -> Self service: support legacy attribute "email" for password self reset and user self registration
  - Fixed bugs:
   -> Users: No drop-down filter box for account status (200)
   -> Custom fields: Account type "Groups" not saving/deleting fields (66)


25.03.2019 6.7
  - Added YubiKey as 2-factor authentication provider
  - Support logging to remote syslog server
  - PHP 7.3 support
  - LAM Pro:
   -> Allow to mark text and text area fields as required
   -> New self service fields:
    -> Mail routing
    -> Windows proxy addresses + mail alias
    -> Shadow account expiration date
    -> Unix and group of names memberships
   -> Base URL for emails in self service can be configured in self service profile
   -> Bind DLZ: support DNAME+XFR records and descriptions in records (requires latest LDAP schema)
   -> Cron jobs: added Shadow account expiration notification job
  - Fixed bugs:
   -> Allow tree-only configurations without any other tab


28.12.2018 6.6
  - New import/export in tools menu
  - YubiKey support
  - Windows users: