@@ -610,7 +610,7 @@
       intermediate release.</para>
 
       <section>
-        <title>6.7 -&gt; 6.9</title>
+        <title>6.7 -&gt; 7.0</title>
 
         <para>No actions required.</para>
       </section>
